--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <body>
      <div>
         <h1>Manager <h1>
-        <p>Name :  ali</p>
+        <p>Name :  abdul</p>
         <p>ID : 1</p>
         <p>Email : 1</p>
         <p>Office Number:  1</p>
