--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
      <body>
      <div>
         <h1>Manager <h1>
-        <p>Name :  abdul</p>
+        <p>Name :  shehroz</p>
         <p>ID : 1</p>
         <p>Email : 1</p>
         <p>Office Number:  1</p>
+        </div><div>
+        <h1>Intern <h1>
+        <p>Name :  shehroz</p>
+        <p>ID : 1</p>
+        <p>Email : 1</p>
+        <p>School:  undefined</p>
+        </div><div>
+        <h1>Enginner <h1>
+        <p>Name :  shehrioz</p>
+        <p>ID : 1</p>
+        <p>Email : 1</p>
+        <p>GitHub:  undefined</p>
         </div>
      </body>
      </html> 
