--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
      <div>
         <h1>Manager <h1>
         <p>Name :  shehroz</p>
-        <p>ID : 1</p>
-        <p>Email : 1</p>
-        <p>Office Number:  1</p>
+        <p>ID : 8989</p>
+        <p>Email : muhamadshehroz10089@gmail.com</p>
+        <p>Office Number:  123</p>
         </div><div>
         <h1>Intern <h1>
-        <p>Name :  shehroz</p>
-        <p>ID : 1</p>
-        <p>Email : 1</p>
-        <p>School:  undefined</p>
+        <p>Name :  humayun</p>
+        <p>ID : 123</p>
+        <p>Email : azam.muhammad@gmail.com</p>
+        <p>School:  humayunSher</p>
         </div><div>
         <h1>Enginner <h1>
-        <p>Name :  shehrioz</p>
-        <p>ID : 1</p>
-        <p>Email : 1</p>
-        <p>GitHub:  undefined</p>
+        <p>Name :  Sohaib</p>
+        <p>ID : 0</p>
+        <p>Email : sohaibkhan</p>
+        <p>GitHub:  middle college</p>
         </div>
      </body>
      </html> 
